Post-rebase fix and statically import `UTC`